k8s/spot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-worker-spot
  namespace: app
spec:
  replicas: 0
  selector:
    matchLabels:
      app: llm-worker-spot
  template:
    metadata:
      labels:
        app: llm-worker-spot
    spec:
      nodeSelector:
        pool: spot
      tolerations:
        - key: "spot-pool"
          operator: "Equal"
          value: "true"
          effect: "PreferNoSchedule"
      containers:
        - name: worker
          image: kartikeya532001/llm-worker:latest
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
